--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
     <title>Sonic Sound</title>
   </head>
   <body bgcolor="#3A6EA5">
- <iframe="/header.html"
+ <iframe="/header.html">
   </body>
 </html>
