--- a/header.html
+++ b/header.html
@@ -1,4 +1,10 @@
 <html>
+  <style>
+    a {
+      color: #03CEA4;
+      text-decoration: none;
+    }
+  </style>
   <body>
    <a class="active" href="#home">Home</a>
   <a href="/about.html">About Me</a>
