--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
     <title>Sonic Sound</title>
   </head>
   <body bgcolor="#3A6EA5">
- <iframe src="header.html" width="100%" height="5%"></iframe>
+ <iframe src="header.html" style="border:none;" width="100%" height="5%"></iframe>
   </body>
 </html>
